# toycrypt

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: hash.py
examples/attacks/: brute_force.py  collision.py  preimage.py
examples/attacks/hashing/: brute_force.py  collision.py  rainbowtable.py
examples/attacks/networked/: eavesdropping.py
toycrypt/: crypto.py  encryption.py  hashing.py  simulation.py  toymath.py  util.py
